# CodeMap

./: .gitignore  CodeMap.txt  README.md  main.py  mcp.py  pyproject.toml  requirements.txt  tests.yml
.github/workflows/: ci.yml  tests.yml
core/: filters.py  index.py  queries.py  state.py
core/analyzer/: __init__.py  c_parser.py  dart_parser.py  js_parser.py  python_parser.py  regex_base.py
core/mcp/: __init__.py  server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js  client.test.js
frontend/src/components/: BusquedaPanel.jsx  DetailPanel.jsx  FileTree.jsx  FilterPanel.jsx  RelacionesPanel.jsx  ScopePanel.jsx  SearchBar.jsx  TopBar.jsx
interfaces/: __init__.py
interfaces/web/: __init__.py  server.py
interfaces/web/routes/: __init__.py  control.py  estructura.py  relaciones.py
shared/: config.py  formatters.py
tests/: conftest.py  test_c_parser.py  test_dart_parser.py  test_filters.py  test_formatters.py  test_index.py  test_js_parser.py  test_mcp.py  test_python_parser.py  test_queries.py  test_state.py  test_web.py
tests/fixtures/: sample.cpp  sample.dart  sample.js  sample.py
