# pyproject.toml

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "shared*"]

[project]
name = "codemap"
version = "0.1.0"
description = "Analizador interactivo de codigo para LLMs"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["core", "shared"]
omit = ["tests/*"]
